2010-08-09 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-icontext.c (is_candidate_for_folders):
	Fix incorrect and optimize handling of folder conditions.

	* src/core/na-icontext.c (is_candidate_for_schemes):
	Fix incorrect and optimize handling of scheme conditions.

	* src/core/na-icontext.c (is_candidate_for_basenames):
	Fix incorrect handling of basename conditions.

	* src/core/na-icontext.c (is_candidate_for_mimetypes):
	Fix incorrect handling of mimetype conditions.

	* src/nact/nact-iaction-tab.c (on_icon_browse):
	Fix incorrect setting of GConf preference.

	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-gtk-utils.h
	(nact_gtk_utils_get_pixbuf, nact_gtk_utils_render):
	Size parameter is actually of GtkIconSize type.

2010-08-07 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Bump version number after unstable release.

	Implement auto-save feature.

	* src/core/na-ipivot-consumer.c:
	* src/core/na-ipivot-consumer.h (on_autosave_changed): New interface.

	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h (na_iprefs_read_uint): New function.

	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h (nact_iprefs_read_uint): Removed function.

	* src/core/na-pivot.c (on_preferences_change):
	Trigger NAIPivotConsumer interface when autosave is changed.

	* src/nact/nact-main-menubar-file.c:
	* src/nact/nact-main-menubar-file.h
	(nact_main_menubar_file_set_autosave): New function.

	* src/nact/nact-main-window.c (ipivot_consumer_on_autosave_changed):
	Implement the new on_autosave_changed() NAIPivotConsumer interface.

	* src/nact/nact-preferences-editor.c (on_base_runtime_init_dialog):
	Replace nact_iprefs_read_uint() with na_iprefs_read_uint().

	Setup auto-save in preferences.

	* data/nautilus-actions-prefs.schemas.in:
	Describe new auto-save-on and auto-save-period preference keys.

	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h
	(nact_iprefs_read_uint,	nact_iprefs_write_uint): New functions.